tela sobre e exportar, historico, correção de erros, verificações ao iniciar e  etc.